--- a/package.json
+++ b/package.json
@@ -4,10 +4,10 @@
   "description": "Website to create campgrounds with certain parameters.",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "start-server": "nodemon server/index.js",
-    "build": "webpack",
-    "start": "webpack-dev-server --watch"
+    "start": "npm-run-all --parallel watch:server watch:build",
+    "watch:build": "webpack --watch",
+    "watch:server": "nodemon server/index.js",
+    "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
     "type": "git",
@@ -29,10 +29,12 @@
     "axios": "^0.19.0",
     "babel-loader": "^8.0.6",
     "express": "^4.17.1",
-    "nodemon": "^2.0.2",
+    "mysql": "^2.18.1",
+    "nodemon": "^2.0.6",
+    "npm-run-all": "^4.1.5",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
-    "webpack": "^4.41.2",
+    "webpack": "^4.44.2",
     "webpack-cli": "^3.3.10",
     "webpack-dev-server": "^3.11.0"
   }
