--- a/package.json
+++ b/package.json
@@ -29,6 +29,8 @@
     "axios": "^0.19.0",
     "babel-loader": "^8.0.6",
     "express": "^4.17.1",
+    "ejs": "^1.0.0",
+    "formik": "^2.2.6",
     "mysql": "^2.18.1",
     "nodemon": "^2.0.6",
     "npm-run-all": "^4.1.5",
