--- a/package.json
+++ b/package.json
@@ -26,16 +26,17 @@
     "@babel/core": "^7.7.4",
     "@babel/preset-env": "^7.7.4",
     "@babel/preset-react": "^7.7.4",
-    "axios": "^0.19.0",
+    "axios": "^0.21.1",
     "babel-loader": "^8.0.6",
-    "express": "^4.17.1",
     "ejs": "^1.0.0",
+    "express": "^4.17.1",
     "formik": "^2.2.6",
     "mysql": "^2.18.1",
     "nodemon": "^2.0.6",
     "npm-run-all": "^4.1.5",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
+    "regenerator-runtime": "^0.13.7",
     "webpack": "^4.44.2",
     "webpack-cli": "^3.3.10",
     "webpack-dev-server": "^3.11.0"
