--- a/package.json
+++ b/package.json
@@ -28,8 +28,10 @@
     "@babel/preset-react": "^7.7.4",
     "axios": "^0.21.1",
     "babel-loader": "^8.0.6",
+    "cloudinary": "^1.23.0",
     "ejs": "^1.0.0",
     "express": "^4.17.1",
+    "express-form-data": "^2.0.14",
     "formik": "^2.2.6",
     "mysql": "^2.18.1",
     "nodemon": "^2.0.6",
