--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "express-form-data": "^2.0.14",
     "formik": "^2.2.6",
     "mysql": "^2.18.1",
+    "njwt": "^1.0.0",
     "nodemon": "^2.0.6",
     "npm-run-all": "^4.1.5",
     "react": "^16.12.0",
