install util package to make the mysql connection query support awaiting then login the new user after she registers

--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
     "regenerator-runtime": "^0.13.7",
+    "util": "^0.12.3",
     "webpack": "^4.44.2",
     "webpack-cli": "^3.3.10",
     "webpack-dev-server": "^3.11.0"
