--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "classnames": "^2.2.6",
     "cloudinary": "^1.23.0",
     "connect-flash": "^0.1.1",
+    "css-loader": "^5.1.3",
     "ejs": "^2.5.5",
     "express": "^4.17.1",
     "express-form-data": "^2.0.14",
@@ -43,10 +44,12 @@
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
     "regenerator-runtime": "^0.13.7",
+    "ssri": ">=8.0.1",
+    "style-loader": "^2.0.0",
     "util": "^0.12.3",
     "webpack": "^4.44.2",
     "webpack-cli": "^3.3.10",
-    "webpack-dev-server": "^3.11.0",
-    "ssri": ">=8.0.1"
-  }
+    "webpack-dev-server": "^3.11.0"
+  },
+  "devDependencies": {}
 }
