--- a/package.json
+++ b/package.json
@@ -43,6 +43,8 @@
     "npm-run-all": "^4.1.5",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
+    "react-redux": "^7.2.3",
+    "redux": "^4.0.5",
     "regenerator-runtime": "^0.13.7",
     "ssri": ">=8.0.1",
     "style-loader": "^2.0.0",
