--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "react-dom": "^16.12.0",
     "react-redux": "^7.2.3",
     "redux": "^4.0.5",
+    "redux-persist": "^6.0.0",
     "regenerator-runtime": "^0.13.7",
     "ssri": ">=8.0.1",
     "style-loader": "^2.0.0",
