--- a/package.json
+++ b/package.json
@@ -56,6 +56,7 @@
   },
   "devDependencies": {
     "@babel/plugin-proposal-class-properties": "^7.13.0",
+    "react-bootstrap": "^1.5.2",
     "react-toastify": "^7.0.3"
   }
 }
