--- a/package.json
+++ b/package.json
@@ -57,6 +57,8 @@
   },
   "devDependencies": {
     "@babel/plugin-proposal-class-properties": "^7.13.0",
+    "eslint": "^7.26.0",
+    "husky": "^6.0.0",
     "react-bootstrap": "^1.5.2",
     "react-toastify": "^7.0.3"
   }
