--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "start": "npm-run-all --parallel watch:server watch:build",
     "watch:build": "webpack --watch",
     "watch:server": "nodemon server/index.js",
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "echo \"Error: no test specified\" && exit 0",
     "prepare": "husky install"
   },
   "repository": {
@@ -59,6 +59,11 @@
   "devDependencies": {
     "@babel/plugin-proposal-class-properties": "^7.13.0",
     "eslint": "^7.26.0",
+    "eslint-config-airbnb": "^18.2.1",
+    "eslint-plugin-import": "^2.22.1",
+    "eslint-plugin-jsx-a11y": "^6.4.1",
+    "eslint-plugin-react": "^7.23.2",
+    "eslint-plugin-react-hooks": "^4.2.0",
     "husky": "^6.0.0",
     "react-bootstrap": "^1.5.2",
     "react-toastify": "^7.0.3"
