--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -18,5 +18,7 @@
         "react"
     ],
     "rules": {
+        "linebreak-style": 0,
+        "react/jsx-filename-extension": [1, { "extensions": [".js", ".jsx"] }]
     }
 }
