--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "njwt": "^1.0.0",
     "nodemon": "^2.0.6",
     "npm-run-all": "^4.1.5",
+    "prop-types": "^15.7.2",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
     "react-redux": "^7.2.3",
