--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "watch:server": "nodemon server/index.js",
     "test": "echo \"Error: no test specified\" && exit 0",
     "prepare": "husky install"
-  },
+  },  
   "repository": {
     "type": "git",
     "url": "git+https://github.com/adarsh2858/personal-yelp-camp.git"
@@ -55,10 +55,10 @@
     "util": "^0.12.3",
     "webpack": "^5.28.0",
     "webpack-cli": "^3.3.10",
-    "webpack-dev-server": "^3.11.0"
+    "webpack-dev-server": "^3.11.0",
+    "@babel/plugin-proposal-class-properties": "^7.13.0"
   },
   "devDependencies": {
-    "@babel/plugin-proposal-class-properties": "^7.13.0",
     "eslint": "^7.26.0",
     "eslint-config-airbnb": "^18.2.1",
     "eslint-plugin-import": "^2.22.1",
