--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "@babel/core": "^7.7.4",
     "@babel/preset-env": "^7.7.4",
     "@babel/preset-react": "^7.7.4",
+    "@babel/plugin-proposal-class-properties": "^7.13.0",
     "axios": "^0.21.1",
     "babel-loader": "^8.0.6",
     "classnames": "^2.2.6",
@@ -45,6 +46,8 @@
     "prop-types": "^15.7.2",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
+    "react-bootstrap": "^1.5.2",
+    "react-toastify": "^7.0.3",
     "react-redux": "^7.2.3",
     "redux": "^4.0.5",
     "redux-persist": "^6.0.0",
@@ -55,8 +58,7 @@
     "util": "^0.12.3",
     "webpack": "^5.28.0",
     "webpack-cli": "^3.3.10",
-    "webpack-dev-server": "^3.11.0",
-    "@babel/plugin-proposal-class-properties": "^7.13.0"
+    "webpack-dev-server": "^3.11.0"
   },
   "devDependencies": {
     "eslint": "^7.26.0",
@@ -65,8 +67,6 @@
     "eslint-plugin-jsx-a11y": "^6.4.1",
     "eslint-plugin-react": "^7.23.2",
     "eslint-plugin-react-hooks": "^4.2.0",
-    "husky": "^6.0.0",
-    "react-bootstrap": "^1.5.2",
-    "react-toastify": "^7.0.3"
+    "husky": "^6.0.0"
   }
 }
